# splash_links

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Containerfile  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  index.html  links.duckdb.wal  pixi.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-app.yml  publish-image.yml
_tests/: test_api.py  test_base_client.py  test_cli.py  test_client_cli.py  test_duckdb_store.py  test_graphql.py  test_service.py
about/: index.html
alembic/: env.py
alembic/versions/: 8fa312b52756_initial_schema.py
examples/: basic.ipynb  basic.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: EntityLinker.jsx  GraphView.jsx  ProjectsPage.jsx
search/: search_index.json
splash_links/: __init__.py  duckdb_store.py  graphql_schema.py  main.py  models.py  pg_store.py  store.py
src/splash_links/: __init__.py  app.py  cli.py  main.py  schema.py  store.py
src/splash_links/client/: base.py  cli.py  tiled.py
test/: index.html
